# cooltrader

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  cooltrader.service  pyproject.toml
cooltrader/: __init__.py  api.py  config.py  database.py  downloader.py  importer.py  main.py  scheduler.py  types.py
