[project]
name = "cooltrader"
version = "0.1.0"
description = "CoolTrader ASX historical data download, import, and API service"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
keywords = ["trading", "asx", "historical-data", "cooltrader"]

dependencies = [
    "peewee>=3.17.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "tenacity>=9.0.0",
    "polars>=1.0.0",
    "apscheduler>=3.10.0",
    "typer>=0.15.0",
    "pyarrow>=23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cooltrader"]

[project.scripts]
cooltrader = "cooltrader.main:cli"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "ARG", "SIM"]
ignore = ["E501", "ARG001"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
check_untyped_defs = false
no_implicit_optional = false
ignore_errors = false
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
    "peewee.*",
    "apscheduler.*",
    "fastapi.*",
    "pydantic.*",
    "pydantic_settings.*",
    "loguru.*",
    "uvicorn.*",
    "tenacity.*",
    "httpx.*",
    "polars.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "integration: Marks tests as integration tests (deselect with '-m \"not integration\"')",
]
addopts = [
    "--strict-markers",
    "--strict-config",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.11.0",
    "pyright>=1.1.408",
    "pre-commit>=4.0.0",
    "types-peewee>=3.19.0.20260109",
]
